@@ -1,11 +1,7 @@
 # listbackup workflow
 
-if [ "$PRETTY" == "true" ] || [ "$DEF_PRETTY" == "true" ]; then 
-  PRETTY=true; 
-fi
-
 if [ "$CLI_NAME" == "all" ] || exist_client_name "$CLI_NAME"; then
-  list_backup "$CLI_NAME" "$PRETTY"
+  list_backup "$CLI_NAME"
 else
 	printf '%25s\n' "$(tput bold)$CLI_NAME$(tput sgr0) not found in database!!"
 fi
