@@ -1,3 +1,4 @@
+# listclient workflow
 
 if [ "$CLI_NAME" != "all" ]; then 
   if ! exist_client_name "$CLI_NAME"; then
@@ -5,6 +6,4 @@ if [ "$CLI_NAME" != "all" ]; then
   fi
 fi
 
-if [ "$PRETTY" == "true" ] || [ "$DEF_PRETTY" == "true" ]; then PRETTY=true; fi
-
-list_client "$CLI_NAME" "$UNSCHED" "$PRETTY"
+list_client "$CLI_NAME" "$UNSCHED"
