@@ -254,11 +254,14 @@ BKP_CLI_PER=1
 #	default: no
 #    REPORT_TYPE=[ovo|nsca-ng|nsca|nrdp|zabbix|mail|xml|json|telegram]
 #	default: empty
+#    ERR_MESSAGE
+#	default: '$(Stamp)$PROGRAM:$WORKFLOW:$CLI_NAME:$CLI_CFG:ERROR: $@'
 #
 ########
 
 ERR_REPORT=no
 REPORT_TYPE=
+ERR_MESSAGE='$(Stamp)$PROGRAM:$WORKFLOW:$CLI_NAME:$CLI_CFG:ERROR: $@'
 
 #
 # REPORT_TYPE=ovo
