@@ -23,54 +23,60 @@ WORKFLOWS=( ${WORKFLOWS[@]} listbackup )
 #LOCKLESS_WORKFLOWS=( ${LOCKLESS_WORKFLOWS[@]} listbackup )
 
 if [ "$WORKFLOW" == "listbackup" ]; then 
-	# Parse options
-	OPT="$(getopt -n $WORKFLOW -o "c:pAh" -l "client:,pretty,all,help" -- "$@")"
-	if (( $? != 0 )); then
-		echo "Try \`$PROGRAM $WORKFLOW --help' for more information."
-		exit 1
-	fi
+  # Parse options
+  OPT="$(getopt -n $WORKFLOW -o "c:pAh" -l "client:,pretty,all,help" -- "$@")"
+  if (( $? != 0 )); then
+    echo "Try \`$PROGRAM $WORKFLOW --help' for more information."
+    exit 1
+  fi
 
-	CLI_NAME="all"
-	
-	eval set -- "$OPT"
-	while true; do
-		case "$1" in
-			(-c|--client)
-				# We need to take the option argument
-				if [ -n "$2" ]; then 
-					CLI_NAME="$2"
-				else
-					echo "$PROGRAM $WORKFLOW - $1 needs a valid argument"	
-					exit 1
-				fi
-				shift 
-				;;
-			(-A|--all)
-				CLI_NAME="all" 
-				;;
-			(-p|--pretty)
-				PRETTY=true
-				;;
-			(-h|--help)
-				listbackuphelp
-				exit 0
-				;;
-			(--) 
-				shift
-				break
-				;;
-			(-*)
-				echo "$PROGRAM $WORKFLOW: unrecognized option '$option'"
-				echo "Try \`$PROGRAM $WORKFLOW --help' for more information."
-				exit 1
-				;;
-		esac
-		shift
-	done
+  CLI_NAME="all"
+  
+  eval set -- "$OPT"
+  while true; do
+    case "$1" in
+      (-c|--client)
+        # We need to take the option argument
+        if [ -n "$2" ]; then 
+          CLI_NAME="$2"
+        else
+          echo "$PROGRAM $WORKFLOW - $1 needs a valid argument"  
+          exit 1
+        fi
+        shift 
+        ;;
 
-	WORKFLOW_listbackup () {
-		#echo listbackup workflow
-		SourceStage "backup/list"
-	}
+      (-A|--all)
+        CLI_NAME="all" 
+        ;;
+
+      (-p|--pretty)
+        PRETTY_TOGGLE=true
+        ;;
+
+      (-h|--help)
+        listbackuphelp
+        exit 0
+        ;;
+
+      (--) 
+        shift
+        break
+        ;;
+
+      (-*)
+        echo "$PROGRAM $WORKFLOW: unrecognized option '$option'"
+        echo "Try \`$PROGRAM $WORKFLOW --help' for more information."
+        exit 1
+        ;;
+
+    esac
+    shift
+  done
+
+  WORKFLOW_listbackup () {
+    #echo listbackup workflow
+    SourceStage "backup/list"
+  }
 
 fi
