@@ -23,62 +23,66 @@ WORKFLOWS=( ${WORKFLOWS[@]} listjob )
 #LOCKLESS_WORKFLOWS=( ${LOCKLESS_WORKFLOWS[@]} listjob )
 
 if [ "$WORKFLOW" == "listjob" ]; then 
-	# Parse options
-	OPT="$(getopt -n $WORKFLOW -o "J:I:c:edAh" -l "job_id:,client:,enabled,disabled,all,help" -- "$@")"
-	if (( $? != 0 )); then
-	    echo "Try \`$PROGRAM $WORKFLOW --help' for more information."
-	    exit 1
-	fi
-	
-	CLI_NAME="all"
-	
-	eval set -- "$OPT"
-	while true; do
-		case "$1" in
-			(-J|-I|--job_id)
-				# We need to take the option argument
-				if [ -n "$2" ]; then 
-					JOB_ID="$2"
-				else
-					echo "$PROGRAM $WORKFLOW - $1 needs a valid argument"	
-					exit 1
-				fi
-				shift 
-				;;
+  # Parse options
+  OPT="$(getopt -n $WORKFLOW -o "J:I:c:edAph" -l "job_id:,client:,enabled,disabled,all,pretty,help" -- "$@")"
+  if (( $? != 0 )); then
+      echo "Try \`$PROGRAM $WORKFLOW --help' for more information."
+      exit 1
+  fi
+  
+  CLI_NAME="all"
+  
+  eval set -- "$OPT"
+  while true; do
+    case "$1" in
+      (-J|-I|--job_id)
+        # We need to take the option argument
+        if [ -n "$2" ]; then 
+          JOB_ID="$2"
+        else
+          echo "$PROGRAM $WORKFLOW - $1 needs a valid argument"  
+          exit 1
+        fi
+        shift 
+        ;;
 
-			(-c|--client)
-				# We need to take the option argument
-				if [ -n "$2" ]; then 
-					CLI_NAME="$2"
-				else
-					echo "$PROGRAM $WORKFLOW - $1 needs a valid argument"	
-					exit 1
-				fi
-				shift 
-				;;
+      (-c|--client)
+        # We need to take the option argument
+        if [ -n "$2" ]; then 
+          CLI_NAME="$2"
+        else
+          echo "$PROGRAM $WORKFLOW - $1 needs a valid argument"  
+          exit 1
+        fi
+        shift 
+        ;;
 
-			(-A|--all)
-				CLI_NAME="all" 
-				;;
+      (-A|--all)
+        CLI_NAME="all" 
+        ;;
 
-			(-h|--help)
-				listjobhelp
-				exit 0
-				;;
+      (-p|--pretty)
+        PRETTY_TOGGLE=true
+        ;;
 
-			(--) 
-				shift
-				break
-				;;
+      (-h|--help)
+        listjobhelp
+        exit 0
+        ;;
+      
+      (--) 
+        shift
+        break
+        ;;
         
-			(-*)
-				echo "$PROGRAM $WORKFLOW: unrecognized option '$option'"
-				echo "Try \`$PROGRAM $WORKFLOW --help' for more information."
-				exit 1
-				;;
-		esac
-		shift
-	done
+      (-*)
+        echo "$PROGRAM $WORKFLOW: unrecognized option '$option'"
+        echo "Try \`$PROGRAM $WORKFLOW --help' for more information."
+        exit 1
+        ;;
+    esac
+    shift
+  done
 
   if [ -z "$CLI_NAME" ] && [ -z "$JOB_ID" ]; then
     echo "$PROGRAM $WORKFLOW: there are not all required parameters to run the command."
@@ -86,9 +90,9 @@ if [ "$WORKFLOW" == "listjob" ]; then
     exit 1
   fi
 
-	WORKFLOW_listjob () {
+  WORKFLOW_listjob () {
     #echo listjob workflow
     SourceStage "job/list"
-	}
+  }
 
 fi
