@@ -23,51 +23,60 @@ WORKFLOWS=( ${WORKFLOWS[@]} listnetwork )
 #LOCKLESS_WORKFLOWS=( ${LOCKLESS_WORKFLOWS[@]} listnetwork )
 
 if [ "$WORKFLOW" == "listnetwork" ]; then 
-	# Parse options
-	OPT="$(getopt -n $WORKFLOW -o "n:Ah" -l "netname:,all,help" -- "$@")"
-	if (( $? != 0 )); then
-		echo "Try \`$PROGRAM $WORKFLOW --help' for more information."
-		exit 1
-	fi
+  # Parse options
+  OPT="$(getopt -n $WORKFLOW -o "n:Aph" -l "netname:,all,pretty,help" -- "$@")"
+  if (( $? != 0 )); then
+    echo "Try \`$PROGRAM $WORKFLOW --help' for more information."
+    exit 1
+  fi
 
-	NET_NAME="all"
+  NET_NAME="all"
 
-	eval set -- "$OPT"
-	while true; do
-		case "$1" in
-			(-n|--netname)
-				# We need to take the option argument
-				if [ -n "$2" ]; then 
-					NET_NAME="$2"
-				else
-					echo "$PROGRAM $WORKFLOW - $1 needs a valid argument"	
-					exit 1
-				fi
-				shift 
-				;;
-			(-A|--all)
-				NET_NAME="all" 
-				;;
-			(-h|--help)
-				listnetworkhelp
-				exit 0
-				;;
-			(--) 
-				shift
-				break
-				;;
-			(-*)
-				echo "$PROGRAM $WORKFLOW: unrecognized option '$option'"
-				echo "Try \`$PROGRAM $WORKFLOW --help' for more information."
-				exit 1
-				;;
-		esac
-		shift
-	done
+  eval set -- "$OPT"
+  while true; do
+    case "$1" in
+      (-n|--netname)
+        # We need to take the option argument
+        if [ -n "$2" ]; then 
+          NET_NAME="$2"
+        else
+          echo "$PROGRAM $WORKFLOW - $1 needs a valid argument"  
+          exit 1
+        fi
+        shift 
+        ;;
 
-	WORKFLOW_listnetwork () {
-		#echo listnetwork workflow
-		SourceStage "network/list"
-	}
+      (-A|--all)
+        NET_NAME="all" 
+        ;;
+      
+      (-p|--pretty)
+        PRETTY_TOGGLE=true
+        ;;
+
+      (-h|--help)
+        listnetworkhelp
+        exit 0
+        ;;
+
+      (--) 
+        shift
+        break
+        ;;
+
+      (-*)
+        echo "$PROGRAM $WORKFLOW: unrecognized option '$option'"
+        echo "Try \`$PROGRAM $WORKFLOW --help' for more information."
+        exit 1
+        ;;
+        
+    esac
+    shift
+  done
+
+  WORKFLOW_listnetwork () {
+    #echo listnetwork workflow
+    SourceStage "network/list"
+  }
 
 fi
