@@ -9,6 +9,8 @@ drlm (2.4.11) stable release; urgency=high
   * Added ability to adjust client configs upon migrations on rescue startup
   * Added ReaR tunning to avoid mac mapping on automatic restore
   * NEW! Telegram error reporting supported
+  * NEW! Configurable error reporting message
+  * NEW! Toggle pretty mode from command line in all lists
 
  -- Pau Roura <pau@brainupdaters.net>  Thu, 08 Feb 2024 00:00:00 +0100
 
